# spimulator

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  ChangeLog  Dockerfile  EXAMPLES.txt  EXAMPLES.txt~  LICENSE  Makefile  README.md  buildDebug.bat  buildDebug.sh  format.sh  macBuildDebug.sh  meson.build  meson_options.txt
CPU/: data.cpp  mem.c  (+19 more)
examples/: .gitignore  CMakeLists.txt  Dockerfile  EXAMPLES.txt  PLAN-asm-comments.md  PLAN-asm-listings.md  PLAN-build-matrix.md  PLAN-container-cross-env.md  PLAN-cs-demos.md  PLAN-curriculum-order.md  PLAN-libctype.md  PLAN-multiarch-shim.md  PLAN-remove-hardcodes.md  PLAN-stdin-or-file.md  PLAN-symbol-tables.md  PLAN-tier1-tier2-tools.md  PLAN-unix-tools.md  READING-ORDER.md  SESSION_NOTES.md  TEACHING-ASSEMBLER-INTERNALS.md  buildDebug.sh
examples/01-helloworld/: 01-helloworld-1.c  01-helloworld-2.c  01-helloworld-3.c  01-helloworld.asm  example01-3.c
examples/01-print1through10/: CMakeLists.txt
examples/01-print1through10/src/: example01-2.c  example01-3.c  example01.c
examples/02-increment-ints/: CMakeLists.txt
examples/02-increment-ints/src/: example02.c
examples/02-print1through10/: 02-print1through10-1.c  02-print1through10-2.c  02-print1through10-3.c  02-print1through10.asm
examples/03-get-char-from-user/: CMakeLists.txt
examples/03-get-char-from-user/src/: example03.c
examples/03-increment-ints/: 03-increment-ints-1.asm  03-increment-ints-1.c  03-increment-ints-2.asm  03-increment-ints-2.c  03-increment-ints-3.c
examples/03-print1through10/: example03-2.c  example03-3.c  example03.c
examples/04-get-char-from-user/: 04-get-char-from-user-1.asm  04-get-char-from-user-1.c  04-get-char-from-user-2.asm  04-get-char-from-user-2.c  04-get-char-from-user-3.c
examples/05-get-char-from-user/: example05.c
examples/05-print-out-ascii/: 05-print-out-ascii-1.asm  05-print-out-ascii-1.c  05-print-out-ascii-2.c  05-print-out-ascii-3.c
examples/06-commaAndPeriodCounter/: 06-commaAndPeriodCounter-1.c  06-commaAndPeriodCounter-2.c  06-commaAndPeriodCounter-3.c  06-commaAndPeriodCounter.asm
examples/06.5-subrountines/: 06.5-subrountines-1.asm  06.5-subrountines-1.c  06.5-subrountines-2.asm  06.5-subrountines-2.c  06.5-subrountines-3.c
examples/07-readCharactersAndPrintThemOut/: 07-readCharactersAndPrintThemOut-1.c
examples/07-subrountines/: 07-subrountines-1.asm  07-subrountines-1.c  07-subrountines-2.asm  07-subrountines-3.c
examples/07-testStringsForEquality/: 07-testStringsForEquality-1.asm  07-testStringsForEquality-2.c
examples/08-loopFunctionCallPrint/: 08-loopFunctionCallPrint-1.c
examples/08-readUntilStopIsInput/: 08-readUntilStopIsInput-1.c
examples/08-testStringsForEquality/: 08-testStringsForEquality-1.c
examples/09-bubbleSort/: 09-bubbleSort-1.c
examples/09-testStringsForEquality/: 09-testStringsForEquality-1.c
examples/10-nestedLoopProcedureCall/: 10-nestedLoopProcedureCall-1.c
examples/11-sortStrings/: 11-sortStrings-1.c
examples/book/source/: ch01.rst  index.rst
examples/iolib/include/: iolib.h
examples/iolib/src/: iolib.c
examples/platformabstraction/include/: platformabstraction.h
examples/platformabstraction/src/: platformabstraction.c
examples/src/: CMakeLists.txt  Makefile  REFERENCE-encodings.md  buildDebug.sh  codeblocksbuildDebug.sh  count-chars.c  crt0.h  integer-to-string.c  io.h  meson.build  os.h  print-char.c  print-int.c  print-string.c  print-uint.c  read-char.c  read-int.c  string-to-int.c
examples/src/00-exit/: 00-exit.asm  00-exit.c
examples/src/01-helloworld/: 01-helloworld-1.c  01-helloworld.asm
examples/src/02-print1through10/: 02-print1through10.asm
examples/src/03-increment-ints/: 03-increment-ints-1.asm
examples/src/04-clear/: 04-clear.asm
examples/src/04-get-char-from-user/: 04-get-char-from-user-1.asm  04-get-char-from-user-2.asm
examples/src/05-print-out-ascii/: 05-print-out-ascii-1.asm  05-print-out-ascii-1.c
examples/src/05-yes/: 05-yes.asm
examples/src/06-commaAndPeriodCounter/: 06-commaAndPeriodCounter-1.c  06-commaAndPeriodCounter.asm
examples/src/06-fizzbuzz/: 06-fizzbuzz.asm
examples/src/07-bubble-sort/: 07-bubble-sort.asm  07-bubble-sort.c
examples/src/07-subrountines/: 07-subrountines-1.asm  07-subrountines-2.asm
examples/src/08-pascals-triangle/: 08-pascals-triangle.asm  08-pascals-triangle.c
examples/src/08-testStringsForEquality/: 08-testStringsForEquality-1.asm
examples/src/09-clear/: 09-clear-1.c  09-clear.asm
examples/src/09-sieve/: 09-sieve.asm  09-sieve.c
examples/src/10-wc/: 10-wc.asm  10-wc.c
examples/src/10-yes/: 10-yes-1.c  10-yes.asm
examples/src/11-cat/: 11-cat.asm
examples/src/11-head/: 11-head.asm
examples/src/12-rev/: 12-rev.asm
examples/src/12-wc/: 12-wc-1.c  12-wc.asm
examples/src/13-head/: 13-head-1.c  13-head.asm
examples/src/13-tr/: 13-tr.asm
examples/src/14-rev/: 14-rev-1.c  14-rev.asm
examples/src/14-rot13/: 14-rot13.asm  14-rot13.c
examples/src/15-expand/: 15-expand.asm  15-expand.c
examples/src/15-nologin/: 15-nologin-1.c  15-nologin.asm
examples/src/16-cat/: 16-cat.asm  16-cat.c
examples/src/16-tr/: 16-tr-1.c  16-tr.asm
examples/src/17-expand/: 17-expand.asm
examples/src/17-nologin/: 17-nologin.asm  17-nologin.c
examples/src/18-cksum/: 18-cksum.asm  18-cksum.c
examples/src/19-echo/: 19-echo.asm  19-echo.c
examples/src/20-factorial/: 20-factorial-1.c  20-factorial.asm
examples/src/21-cat-file/: 21-cat-file-1.c  21-cat-file.asm
examples/src/21-gcd/: 21-gcd.asm  21-gcd.c
examples/src/22-binary-search/: 22-binary-search.asm  22-binary-search.c
examples/src/22-gcd/: 22-gcd-1.c  22-gcd.asm
examples/src/23-cat-file/: 23-cat-file.asm  23-cat-file.c
examples/tasks/: PLAN-asm-comments.md  PLAN-asm-listings-makefile.md  PLAN-build-matrix.md  PLAN-container-cross-env.md  PLAN-curriculum-order.md  PLAN-libstdlib-atexit.md  PLAN-libstdlib.md  PLAN-libstr.md  PLAN-multiarch-shim.md  PLAN-unix-tools.md  SESSION_NOTES.md  rename-plan-prefixed-curriculum-docs.md
examples/tests/: run-demo.sh
visualizer/parser/: CMakeLists.txt  buildDebug.sh
(+505 files in other folders)
